# cubot

./: .dockerignore  .env.sample  .env.test  .pre-commit-config.yaml  Dockerfile  Dockerfile.test  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  manage.py  ollama-entrypoint.sh  pyproject.toml  pytest.ini
.github/workflows/: deploy.yml
apps/chat/: models.py  prompts.py  serializers.py  urls.py  views.py
apps/chat/engines/: base.py  ollama_engine.py
apps/chat/migrations/: 0001_initial.py  0002_alter_conversation_options_and_more.py  0003_alter_conversation_id.py  0004_conversation_topic.py
apps/chat/services/: conversation.py  debate.py
apps/chat/tests/: test_api.py  test_conversation_service.py  test_debate_service.py  test_engine.py  test_prompts.py
apps/llm_experiments/: admin.py  apps.py  models.py  services.py
apps/llm_experiments/migrations/: 0001_initial.py
apps/llm_experiments/tests/: test_services.py
cubot/: asgi.py  settings.py  urls.py  wsgi.py
