[project]
name = "cubot"
version = "0.1.0"
description = "Persuasive chatbot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.4",
    "djangorestframework>=3.16.0",
    "dotenv>=0.9.9",
    "psycopg2>=2.9.10",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
]
